Fix white background in dark mode at the bottom of page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app {
 	background-color: var(--background);
 	min-height: 100vh;
+	padding-bottom: 5em;
 }
